src/objects/Arbol_Decision_Lineas__c.object
<CustomObject>
    <fields>
        <fullName>ADL_DIV_S_Franquicia_Fija__c</fullName>
        <label>Salida: Franquicia Fija</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADL_DIV_S_Salida_Limite_Cobertura__c</fullName>
        <label>Salida: Límite de Cobertura</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADL_FOR_Compania__c</fullName>
        <formula>ADL_LKP_Arbol_Decision__r.ADC_FOR_Compania__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compañía</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADL_FOR_Producto__c</fullName>
        <formula>ADL_LKP_Arbol_Decision__r.ADC_LKP_Producto_CIA__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Producto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADL_LKP_Arbol_Decision__c</fullName>
        <label>Árbol de Decisión</label>
        <referenceTo>Arbol_Decision__c</referenceTo>
        <relationshipName>Arbol_de_Decision_Lineas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADL_LKP_Ay_Argumentario_Rechazo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ayuda relacionada al rechazo</description>
        <label>Ayuda: Argumentario Rechazo</label>
        <referenceTo>Ayuda__c</referenceTo>
        <relationshipLabel>Árbol de Decisión: Líneas (Ayuda: Argumentario Rechazo)</relationshipLabel>
        <relationshipName>REL_AY_Argumentario_Rechazo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADL_LKP_Ay_Causa_Averia__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ayuda relacionada a la causa de la avería</description>
        <label>Ayuda: Causa de la avería</label>
        <referenceTo>Ayuda__c</referenceTo>
        <relationshipName>REL_AY_Causa_Averia</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADL_LKP_Ay_Danos_Perjudicados__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ayuda relacionada a los daños a perjudicados</description>
        <label>Ayuda: Daños a Perjudicados</label>
        <referenceTo>Ayuda__c</referenceTo>
        <relationshipLabel>Árbol de Decisión: Líneas (Ayuda: Daños a Perjudicados)</relationshipLabel>
        <relationshipName>REL_AY_Danos_Perjudicados</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADL_LKP_Ay_Danos_Propios__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ayuda relacionada a los daños propios</description>
        <label>Ayuda: Daños propios</label>
        <referenceTo>Ayuda__c</referenceTo>
        <relationshipLabel>Árbol de Decisión: Líneas (Ayuda: Daños propios)</relationshipLabel>
        <relationshipName>REL_AY_Danos_Propios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADL_LKP_Ay_Detalle_Averia__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ayuda relacionada al detalle de la avería</description>
        <label>Ayuda: Detalle de la avería</label>
        <referenceTo>Ayuda__c</referenceTo>
        <relationshipName>REL_AY_Detalle_Averia</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADL_LKP_Ay_DocsIndemnizables__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo destinado a orientar al gestor sobre qué tipos de documents debe solicitar/sugerir al cliente</description>
        <label>Ayuda: Documentos Indemnizables</label>
        <referenceTo>Ayuda__c</referenceTo>
        <relationshipLabel>Árbol de Decisión: Líneas (Ayuda: Documentos Indemnizables)</relationshipLabel>
        <relationshipName>REL_AY_DocsIndemnizables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADL_LKP_Ay_Grupo_Causa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ayuda relacionada al grupo de causa</description>
        <label>Ayuda: Grupo de Causa</label>
        <referenceTo>Ayuda__c</referenceTo>
        <relationshipName>REL_AY_Grupo_Causa</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADL_LKP_Ay_Tipo_Averia__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ayuda relacionada al tipo de avería</description>
        <label>Ayuda: Tipo de avería</label>
        <referenceTo>Ayuda__c</referenceTo>
        <relationshipName>REL_AY_Tipo_Averia</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADL_POR_S_Franquicia__c</fullName>
        <label>Salida: % Franquicia</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADL_SEL_Averia_Cubierta__c</fullName>
        <label>N/A: Avería Cubierta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                    <label>Sí</label>
                </value>
                <value>
                    <fullName>NO</fullName>
                    <label>No</label>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_Danos_Propios_Cubiertos__c</fullName>
        <label>N/A: Daños Propios Cubiertos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                    <label>Sí</label>
                </value>
                <value>
                    <fullName>NO</fullName>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Parcial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_E_Causa_Averia__c</fullName>
        <label>Entrada: Causa de la Avería</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ALCANTARILLADO, COLECTORES Y OTROS CAUCES SUBTERRANEOS AL DESBORDARSE, ROMPERSE O AVERIARSE</fullName>
                </value>
                <value>
                    <fullName>AMPARADOS POR EL CONSORCIO DE COMPENSACION SEGUROS</fullName>
                </value>
                <value>
                    <fullName>A PARTIR DE TERCER GRADO DE CONSANGUINIDAD</fullName>
                </value>
                <value>
                    <fullName>CAIDA DE ARBOLES SOBRE LA VIVIENDA</fullName>
                </value>
                <value>
                    <fullName>CON FALTA DE MANTENIMIENTO</fullName>
                </value>
                <value>
                    <fullName>CON GARANTIA</fullName>
                </value>
                <value>
                    <fullName>CONGELACION DE TUBERIAS/VIVIENDAS DESHABITADAS &gt;30 DIAS</fullName>
                </value>
                <value>
                    <fullName>CON LLAMA</fullName>
                </value>
                <value>
                    <fullName>CONTADOR CORRE MAS DE LO NORMAL</fullName>
                </value>
                <value>
                    <fullName>CON Y SIN GARANTIA</fullName>
                </value>
                <value>
                    <fullName>CORROSION ADMITE REPARACION PUNTUAL</fullName>
                </value>
                <value>
                    <fullName>CORROSION NO ADMITE REPARACION PUNTUAL</fullName>
                </value>
                <value>
                    <fullName>DAÑADO POR EL IMPACTO</fullName>
                </value>
                <value>
                    <fullName>DAÑOS OCASIONADOS POR AGUAS SUBTERRANEAS NO CANALIZADAS</fullName>
                </value>
                <value>
                    <fullName>DAÑOS POR LA PENETRACION POR PUERTAS/VENTANAS/SALIDAS DE HUMOS/CHIMENEAS…/QUE HAYAN QUEDADO SIN CERRAR O ESTEN DEFECTUOSOS</fullName>
                </value>
                <value>
                    <fullName>DEFECTO CONSTRUCCION</fullName>
                </value>
                <value>
                    <fullName>DEFECTO CONSTRUCCION/REFORMAS</fullName>
                </value>
                <value>
                    <fullName>DEFECTO DE CONSTRUCCION</fullName>
                </value>
                <value>
                    <fullName>DE LOS LAGOS SIN SALIDA NATURAL, O DE CANALES, ACEQUIAS Y OTROS CURSOS O CAUCES</fullName>
                </value>
                <value>
                    <fullName>DENTRO DE TERRITORIO ESPAÑOL</fullName>
                </value>
                <value>
                    <fullName>DENTRO O FUERA DE TERRITORIO ESPAÑOL</fullName>
                </value>
                <value>
                    <fullName>DESBORDAMIENTO O ROTURA DE PRESAS O DIQUES DE CONTENCION</fullName>
                </value>
                <value>
                    <fullName>DURANTE REFORMAS /REPARACIONES</fullName>
                </value>
                <value>
                    <fullName>EN PROPIEDAD O EN PODER DEL ASEGURADO Y/O PERSONAS QUE DE EL DEPENDAN</fullName>
                </value>
                <value>
                    <fullName>FALTA DE MANTENIMIENTO</fullName>
                </value>
                <value>
                    <fullName>FALTA DE MANTENIMIENTO/DEFECTO DE CONSTRUCCION</fullName>
                </value>
                <value>
                    <fullName>FILTRACIONES EXTERIORES (FACHADA/TECHO/MUROS/TERRAZAS/CUBIERTAS)</fullName>
                </value>
                <value>
                    <fullName>FILTRACIONES EXTERIORES CON FALTA DE MANTENIMIENTO</fullName>
                </value>
                <value>
                    <fullName>FILTRACIONES EXTERIORES SIN FALTA DE MANTENIMIENTO</fullName>
                </value>
                <value>
                    <fullName>FUERA DE TERRITORIO ESPAÑOL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_E_Danos_Perjud_Cubiertos__c</fullName>
        <label>Entrada: Daños a Perjudicados Cubiertos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                    <label>Sí</label>
                </value>
                <value>
                    <fullName>NO</fullName>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Parcial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_E_Danos_Perjudicados__c</fullName>
        <label>Entrada: Daños a Perjudicados</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                    <label>Sí</label>
                </value>
                <value>
                    <fullName>NO</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_E_Danos_Propios__c</fullName>
        <label>Entrada: Daños Propios</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                    <label>Sí</label>
                </value>
                <value>
                    <fullName>NO</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_E_Detalle_Averia__c</fullName>
        <label>Entrada: Detalle de Avería</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TUBERIAS QUE DISCURRAN POR EL EXTERIOR DE LA VIVIENDA (PATIOS, JARDINES, PISCINAS)</fullName>
                </value>
                <value>
                    <fullName>ARQUETAS/FOSAS SEPTICAS/CLOACAS/ALCANTARILLAS O AGUA DE LLUVIA</fullName>
                </value>
                <value>
                    <fullName>CONDENSACIONES</fullName>
                </value>
                <value>
                    <fullName>APARATOS Y/O SUSTANCIAS DISTINTAS A LAS HABITUALES</fullName>
                </value>
                <value>
                    <fullName>AVERIA REPARADA ASEG. NO TIENE DATOS CAUSANTE</fullName>
                </value>
                <value>
                    <fullName>ESCAPES REPENTINOS EN HOGARES O SISTEMAS DE CALEFACCION O COCCION (INSTALADOS ADECUADAMENTE)</fullName>
                </value>
                <value>
                    <fullName>REUNIONES/MANIFESTACIONES AUTORIZADAS/HUELGAS LEGALES</fullName>
                </value>
                <value>
                    <fullName>AVERIA REPARADA ASEG. SI TIENE DATOS CAUSANTE</fullName>
                </value>
                <value>
                    <fullName>CONTRATO CON TIEMPO INFERIOR A 6 MESES</fullName>
                </value>
                <value>
                    <fullName>ACCION LENTA Y CONTINUADA DEL HUMO</fullName>
                </value>
                <value>
                    <fullName>DAÑOS POR HUMO GENERADOS EN VIVIENDAS O INSTALACIONES DISTINTAS A LAS ASEGURADAS</fullName>
                </value>
                <value>
                    <fullName>ESCAPES REPENTINOS EN HOGARES O SISTEMAS DE CALEFACCION O COCCION (NO INSTALADOS ADECUADAMENTE)</fullName>
                </value>
                <value>
                    <fullName>EN PROPIEDAD O EN PODER DEL ASEGURADO Y/O PERSONAS QUE DE EL DEPENDAN</fullName>
                </value>
                <value>
                    <fullName>VEHICULOS</fullName>
                </value>
                <value>
                    <fullName>ANIMALES</fullName>
                </value>
                <value>
                    <fullName>NO PROPIEDAD DEL ASEGURADO Y/O EN PODER DE TERCERAS PERSONAS</fullName>
                </value>
                <value>
                    <fullName>POR LA COMBUSTION DE LOS GASES</fullName>
                </value>
                <value>
                    <fullName>POR CAIDA DE RAYO</fullName>
                </value>
                <value>
                    <fullName>FORTUITO</fullName>
                </value>
                <value>
                    <fullName>A CONSECUENCIA DE ENVASES Y ENLATADOS DEFECTUOSOS</fullName>
                </value>
                <value>
                    <fullName>POR AVERIA DEL FRIGORIFICO Y/O CONGELADOR</fullName>
                </value>
                <value>
                    <fullName>POR FALLO EN EL SUMINISTRO</fullName>
                </value>
                <value>
                    <fullName>ELEMENTOS DE ILUMINACION Y/O ALUMBRADO</fullName>
                </value>
                <value>
                    <fullName>ORDENADORES</fullName>
                </value>
                <value>
                    <fullName>PINTADAS/INSCRIPCIONES/FIJACION DE CARTELES Y HECHOS SIMILARES</fullName>
                </value>
                <value>
                    <fullName>COLGAR CUADROS, CORTINAS</fullName>
                </value>
                <value>
                    <fullName>MONTAR MUEBLES</fullName>
                </value>
                <value>
                    <fullName>BISAGRAS, JUNQUILLOS, TORNILLERIA, ETC</fullName>
                </value>
                <value>
                    <fullName>ROTURA DE PUERTA EN LA VIVIENDA POR FUERZA MAYOR  (MENOR, DISCAPACITADO O PERSONA MAYOR)</fullName>
                </value>
                <value>
                    <fullName>CAIDAS DE AZULEJOS/SOLADO MAL REMATADO, ETC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_E_Grupo_Causa__c</fullName>
        <label>Entrada: Grupo de Causa</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RECHAZOS</fullName>
                </value>
                <value>
                    <fullName>EXTENSION GARAN</fullName>
                </value>
                <value>
                    <fullName>ELECTRICOS</fullName>
                </value>
                <value>
                    <fullName>R.C.</fullName>
                </value>
                <value>
                    <fullName>EXTENSION DE GARANTIAS</fullName>
                </value>
                <value>
                    <fullName>ROBO</fullName>
                </value>
                <value>
                    <fullName>OTRAS CONTINGENCIAS</fullName>
                </value>
                <value>
                    <fullName>INCENDIO</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>CRISTALES</label>
                </value>
                <value>
                    <fullName>01</fullName>
                    <label>AGUA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_E_Otros_Danos_Perjudicados__c</fullName>
        <label>Entrada: Otros Daños Perjudicados</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LESIONES CORPORALES</fullName>
                </value>
                <value>
                    <fullName>OTROS DAÑOS PERJUDICADO</fullName>
                </value>
                <value>
                    <fullName>ALIMENTOS REFRIGERADOS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_E_Otros_Danos_Propios__c</fullName>
        <label>Entrada: Otros Daños Propios</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALIMENTOS REFRIGERADOS</fullName>
                </value>
                <value>
                    <fullName>TEJADO</fullName>
                </value>
                <value>
                    <fullName>FACTURA EXCESO CONSUMO AGUA</fullName>
                </value>
                <value>
                    <fullName>LESIONES CORPORALES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_E_Situacion_Danos_Perjud__c</fullName>
        <label>Entrada: Situación Daños Perjudicados</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACUARIOS</fullName>
                </value>
                <value>
                    <fullName>ENSERES</fullName>
                </value>
                <value>
                    <fullName>MOBILIARIO</fullName>
                </value>
                <value>
                    <fullName>PARED</fullName>
                </value>
                <value>
                    <fullName>PUERTA</fullName>
                </value>
                <value>
                    <fullName>SUELO</fullName>
                </value>
                <value>
                    <fullName>TECHO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_E_Situacion_Danos_Propios__c</fullName>
        <label>Entrada: Situación Daños Propios</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MOBILIARIO DEL EXTERIOR</fullName>
                </value>
                <value>
                    <fullName>TEJADO</fullName>
                </value>
                <value>
                    <fullName>ENCIMERAS CONTENIDO (COCINA, BAÑO, MUEBLES)</fullName>
                </value>
                <value>
                    <fullName>AJUSTE DE PUERTA</fullName>
                </value>
                <value>
                    <fullName>ANTENA</fullName>
                </value>
                <value>
                    <fullName>CRISTAL Y PERFILERIA</fullName>
                </value>
                <value>
                    <fullName>PERFILERIA</fullName>
                </value>
                <value>
                    <fullName>BAÑERA</fullName>
                </value>
                <value>
                    <fullName>BIDET</fullName>
                </value>
                <value>
                    <fullName>CISTERNA</fullName>
                </value>
                <value>
                    <fullName>INODORO</fullName>
                </value>
                <value>
                    <fullName>LAVABO</fullName>
                </value>
                <value>
                    <fullName>PLATO DE DUCHA</fullName>
                </value>
                <value>
                    <fullName>ORDENADORES</fullName>
                </value>
                <value>
                    <fullName>APARATOS DEL CONTENIDO (LAVADORA, LAVAVAJILLAS, FRIGORIFICO, TELEVISOR, ETC…)</fullName>
                </value>
                <value>
                    <fullName>APARATOS DEL CONTINENTE(CALENTADOR, HORNO EMPOTRADO, VITROCERAMICA, ETC…)</fullName>
                </value>
                <value>
                    <fullName>CUADRO ELECTRICO</fullName>
                </value>
                <value>
                    <fullName>INSTALACION ELECTRICA</fullName>
                </value>
                <value>
                    <fullName>BAÑERA DE HIERRO ESMALTADO</fullName>
                </value>
                <value>
                    <fullName>CRISTAL Y VINILO CONTINENTE</fullName>
                </value>
                <value>
                    <fullName>CRISTAL Y VINILO MOBILIARIO</fullName>
                </value>
                <value>
                    <fullName>VINILO</fullName>
                </value>
                <value>
                    <fullName>REPOSICION DE DOCUMENTOS</fullName>
                </value>
                <value>
                    <fullName>APERTURA DE PUERTA</fullName>
                </value>
                <value>
                    <fullName>REPARACION O SUSTITUCION BOMBIN/CERRADURA EN PUERTA PRINCIPAL</fullName>
                </value>
                <value>
                    <fullName>AJUSTE DE VENTANA</fullName>
                </value>
                <value>
                    <fullName>ATASCO DE PERSIANA</fullName>
                </value>
                <value>
                    <fullName>REPARACION DE PERSIANA</fullName>
                </value>
                <value>
                    <fullName>SUSTITUCION DE LAMA/CUERDA</fullName>
                </value>
                <value>
                    <fullName>TECHO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_E_Tipo_Averia__c</fullName>
        <label>Entrada: Tipo de Avería</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACCESO Y/O DAÑOS PROVOCADOS POR OCUPAS</fullName>
                </value>
                <value>
                    <fullName>ACCION DIRECTA DEL CALOR SIN EXISTENCIA DE LLAMA</fullName>
                </value>
                <value>
                    <fullName>ALTERACION ELECTRICA: DAÑOS SOLO EN INSTALACION ELECTRICA O INSTALACION ELECTRICA + APARATOS (CON GARANTIA, SIN Y CON/SIN)</fullName>
                </value>
                <value>
                    <fullName>ALTERACION ELECTRICA: SOLO DAÑOS EN APARATOS (UNOS ESTAN EN GARANTIA Y OTROS NO LO ESTAN)</fullName>
                </value>
                <value>
                    <fullName>ALTERACION ELECTRICA: SOLO DAÑOS EN APARATOS QUE ESTAN EN GARANTIA</fullName>
                </value>
                <value>
                    <fullName>ALTERACION ELECTRICA: SOLO DAÑOS EN APARATOS QUE NO ESTAN EN GARANTIA.</fullName>
                </value>
                <value>
                    <fullName>APERTURA DE PUERTA COSTEADA POR EL ASEGURADO</fullName>
                </value>
                <value>
                    <fullName>ATASCO</fullName>
                </value>
                <value>
                    <fullName>AVERIA PROVOCADA POR UN CAUSANTE</fullName>
                </value>
                <value>
                    <fullName>AVERIAS DE GAS</fullName>
                </value>
                <value>
                    <fullName>CAIDA DE RAYO</fullName>
                </value>
                <value>
                    <fullName>CAIDA DE RAYO: DAÑOS SOLO EN INSTALACION ELECTRICA O INSTALACION ELECTRICA + APARATOS (CON GARANTIA, SIN Y CON/SIN)</fullName>
                </value>
                <value>
                    <fullName>CAIDA DE RAYO: SOLO DAÑOS EN APARATOS (UNOS ESTAN EN GARANTIA Y OTROS NO LO ESTAN)</fullName>
                </value>
                <value>
                    <fullName>CAIDA DE RAYO: SOLO DAÑOS EN APARATOS QUE ESTAN EN GARANTIA</fullName>
                </value>
                <value>
                    <fullName>CAIDA DE RAYO: SOLO DAÑOS EN APARATOS QUE NO ESTAN EN GARANTIA (UNO O VARIOS)</fullName>
                </value>
                <value>
                    <fullName>CORTOCIRCUITO O SOBRETENSION</fullName>
                </value>
                <value>
                    <fullName>DAÑOS CAUSADOS POR ANIMALES O INSECTOS</fullName>
                </value>
                <value>
                    <fullName>DAÑOS EN PUERTAS Y ACCESORIOS</fullName>
                </value>
                <value>
                    <fullName>DAÑOS EN VENTANAS Y/O MAMPARAS, CIERRES Y MARCOS</fullName>
                </value>
                <value>
                    <fullName>DAÑOS MATERIALES Y/O PERSONALES A UN PERJUDICADO</fullName>
                </value>
                <value>
                    <fullName>ESCAPE DE AGUA</fullName>
                </value>
                <value>
                    <fullName>EXPLOSION DE CALDERA/CALENTADOR</fullName>
                </value>
                <value>
                    <fullName>EXPOLIACION</fullName>
                </value>
                <value>
                    <fullName>FALTA DE MANTENIMIENTO Y/O DEFECTO DE CONSTRUCCION</fullName>
                </value>
                <value>
                    <fullName>FENOMENOS METEOROLOGICOS</fullName>
                </value>
                <value>
                    <fullName>FILTRACIONES/CONDENSACIONES/MANCHA SECA</fullName>
                </value>
                <value>
                    <fullName>HECHO ACCIDENTAL O FORTUITO QUE PROVOCA DAÑOS SOBRE EL CONTINENTE</fullName>
                </value>
                <value>
                    <fullName>HUMO</fullName>
                </value>
                <value>
                    <fullName>HURTO</fullName>
                </value>
                <value>
                    <fullName>IMPACTO DESDE EL EXTERIOR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_E_Tipo_Riesgo__c</fullName>
        <label>Entrada: Tipo de Riesgo</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipos_de_Riesgo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_S_Causa__c</fullName>
        <label>Salida: Causa</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>21</fullName>
                    <label>CRISTALES</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_S_DocsIndemnizableSugeridos__c</fullName>
        <description>Salida del árbol de decisión de confirmación dónde se indican aquellos documentos que se le sugieren al gestor solicitar al cliente en función de una ayuda</description>
        <label>Salida: Docs Indemnizables Sugeridos</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipos_de_Documento_Indeminizable</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_S_DocsIndemnizable__c</fullName>
        <label>Salida: Documentación Indemnizables</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipos_de_Documento_Indeminizable</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_S_Email_Auto_AV__c</fullName>
        <label>Salida: Email automático avería y daño</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Email_Averia_Dano</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_S_Gremio_Limite_Cobertura__c</fullName>
        <label>Salida: Gremio Límite Cobertura</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>21</fullName>
                    <label>AIRE ACONDICIONADO</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>ALARMAS</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>ALBAÑIL</label>
                </value>
                <value>
                    <fullName>37</fullName>
                    <label>AMBULANCIAS</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>ANTENISTA</label>
                </value>
                <value>
                    <fullName>41</fullName>
                    <label>ANULACIÓN TARJETAS</label>
                </value>
                <value>
                    <fullName>42</fullName>
                    <label>AUTOMÁTICOS CASER</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>BARNIZADOR</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>CALEFACCIÓN</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>CARPINTERO MADERA</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>CARPINTERO METÁLICO</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>CERRAJERO</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>CRISTALERO</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>ELECTRICISTA</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>ENMOQUETADOR</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>ESCAYOLA</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>FACHADAS</label>
                </value>
                <value>
                    <fullName>01</fullName>
                    <label>FONTANERO</label>
                </value>
                <value>
                    <fullName>49</fullName>
                    <label>FRIGORISTA</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>FRIO INDUSTRIAL</label>
                </value>
                <value>
                    <fullName>57</fullName>
                    <label>FUMIGACIÓN</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>GAS</label>
                </value>
                <value>
                    <fullName>73</fullName>
                    <label>GRANDES REFORMAS</label>
                </value>
                <value>
                    <fullName>70</fullName>
                    <label>GRANDES SINIESTROS</label>
                </value>
                <value>
                    <fullName>38</fullName>
                    <label>HOTEL</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>IMPERMEABILIZACIONES</label>
                </value>
                <value>
                    <fullName>33</fullName>
                    <label>INSPECCIÓN DE SERVICIOS</label>
                </value>
                <value>
                    <fullName>75</fullName>
                    <label>INSTALACIONES AIRE ACONDICIONADO</label>
                </value>
                <value>
                    <fullName>56</fullName>
                    <label>JARDINERÍA</label>
                </value>
                <value>
                    <fullName>40</fullName>
                    <label>LAVANDERÍA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>